--- a/doc/本番運用チェックリスト.md
+++ b/doc/本番運用チェックリスト.md
@@ -24,6 +24,9 @@
 - [x] Cookie設定の確認（`secure: true` が本番で有効か）
 - [ ] HTTPSの強制確認
 - [ ] Firebase Authenticationの設定確認
+  - [ ] 認証済みドメインにVercelのドメインを追加（`auth/unauthorized-domain`エラー回避）
+    - [ ] プロダクションドメイン（`your-project-name.vercel.app`）
+    - [ ] カスタムドメイン（設定している場合）
   - [ ] 許可するメールドメインの制限（必要に応じて）
   - [ ] パスワードポリシーの設定
 
@@ -104,4 +107,3 @@
 - [ ] 環境変数の説明文書化（`VERCEL_ENV_VARS.md` を更新）
 - [ ] トラブルシューティングガイドの作成
 - [ ] アーキテクチャ図の作成（必要に応じて）
-
