ゲストログインをメールアドレス認証方式に変更、ゲストメールアドレスを更新
- Firebase Admin SDKのカスタムトークン方式から、Firebase Client SDKのメールアドレス認証方式に変更
- ゲストメールアドレスを s.t.n.uytrewq+guest@gmail.com に変更
- handleGuestLogin サーバーアクションを削除（不要になったため）
- 環境変数 NEXT_PUBLIC_GUEST_PASSWORD の追加
- 関連ドキュメントを更新（トラブルシューティングガイド、環境変数設定ガイド）

--- a/doc/ゲストログイン問題のトラブルシューティング.md
+++ b/doc/ゲストログイン問題のトラブルシューティング.md
@@ -2,7 +2,32 @@
 
 Vercel staging環境でゲストログインが失敗する場合の確認手順です。
 
-## 1. Vercel環境変数の確認
+## 概要
+
+ゲストログインは、Firebase Authenticationのメールアドレス認証を使用しています。
+固定メールアドレス（`s.t.n.uytrewq+guest@gmail.com`）と環境変数で設定したパスワードでログインします。
+
+## 1. Firebase Consoleでの設定確認
+
+### 1.1 メールアドレス認証の有効化
+
+1. [Firebase Console](https://console.firebase.google.com/) にログイン
+2. プロジェクトを選択
+3. **Authentication** > **Sign-in method** タブに移動
+4. **メール/パスワード** が有効になっているか確認
+5. 無効の場合は有効化する
+
+### 1.2 ゲストユーザーの作成
+
+1. Firebase Console > **Authentication** > **Users** タブに移動
+2. メールアドレス `s.t.n.uytrewq+guest@gmail.com` のユーザーが存在するか確認
+3. 存在しない場合は、**ユーザーを追加** をクリック
+4. 以下の情報を入力：
+   - メールアドレス: `s.t.n.uytrewq+guest@gmail.com`
+   - パスワード: 任意（環境変数 `NEXT_PUBLIC_GUEST_PASSWORD` と同じ値に設定）
+5. ユーザーを作成
+
+## 2. Vercel環境変数の確認
 
 ### 方法1: Vercel CLIで確認
 
@@ -13,8 +38,8 @@ vercel env ls
 # Preview環境の環境変数を確認
 vercel env ls | Select-String "preview"
 
-# 特定の環境変数を確認（例: FIREBASE_PROJECT_ID）
-vercel env ls | Select-String "FIREBASE_PROJECT_ID"
+# 特定の環境変数を確認（例: NEXT_PUBLIC_GUEST_PASSWORD）
+vercel env ls | Select-String "NEXT_PUBLIC_GUEST_PASSWORD"
 ```
 
 ### 方法2: Vercelダッシュボードで確認
@@ -26,25 +51,7 @@ vercel env ls | Select-String "FIREBASE_PROJECT_ID"
 
 ### 必須環境変数（Preview環境に設定されているか確認）
 
-- `FIREBASE_PROJECT_ID` - FirebaseプロジェクトID
-- `FIREBASE_CLIENT_EMAIL` - Firebase Service Accountのメールアドレス
-- `FIREBASE_PRIVATE_KEY` - Firebase Service Accountの秘密鍵（改行文字含む）
-
-## 2. Vercelログの確認
-
-### 方法1: Vercelダッシュボードで確認
-
-1. Vercel Dashboard > プロジェクト > **Deployments** に移動
-2. 該当するデプロイメントを選択
-3. **Functions** タブを開く
-4. ゲストログインを実行した時刻のログを確認
-5. `[handleGuestLogin]` で始まるログを探す
-
-### 確認すべきログ
-
-- `[handleGuestLogin] Environment check:` - 環境変数の値
-- `[handleGuestLogin] Firebase Admin SDK initialized successfully` - Firebase Admin SDKの初期化成功
-- `[handleGuestLogin] Error handling guest login:` - エラーの詳細
+- `NEXT_PUBLIC_GUEST_PASSWORD` - ゲストログイン用パスワード（Firebase Consoleで設定したパスワードと同じ値）
 
 ## 3. よくある問題と解決方法
 
@@ -52,80 +59,87 @@ vercel env ls | Select-String "FIREBASE_PROJECT_ID"
 
 **症状:**
 
-- ログに `FIREBASE_PROJECT_ID: ✗ Missing` などが表示される
+- エラーメッセージ: "ゲストログインのパスワードが設定されていません"
 
 **解決方法:**
 
+1. `.env.local` に `NEXT_PUBLIC_GUEST_PASSWORD` を追加
+2. Vercel環境変数に設定：
+
 ```powershell
-# Preview環境に環境変数を設定
-.\scripts\set-vercel-env-auto.ps1
-# または
-vercel env add FIREBASE_PROJECT_ID preview
+vercel env add NEXT_PUBLIC_GUEST_PASSWORD preview
+# パスワードを入力（Firebase Consoleで設定したパスワードと同じ値）
 ```
 
-### 問題2: FIREBASE_PRIVATE_KEYの改行文字の問題
+3. 再デプロイを実行
+
+### 問題2: パスワードが一致しない
 
 **症状:**
 
-- Firebase Admin SDKの初期化エラー
-- `Error: Invalid private key` などのエラー
+- エラーメッセージ: "パスワードが間違っています。環境変数を確認してください。"
+- エラーコード: `auth/wrong-password`
 
 **解決方法:**
 
-```powershell
-# 既存の環境変数を削除
-vercel env rm FIREBASE_PRIVATE_KEY preview --yes
+1. Firebase Consoleで `s.t.n.uytrewq+guest@gmail.com` のパスワードを確認
+2. 環境変数 `NEXT_PUBLIC_GUEST_PASSWORD` が同じ値になっているか確認
+3. 異なる場合は、環境変数を更新するか、Firebase Consoleでパスワードをリセット
 
-# .env.localから値を読み込んで再設定
-$privateKey = Get-Content .env.local | Where-Object { $_ -match "^FIREBASE_PRIVATE_KEY=" } | ForEach-Object { $_ -replace "^FIREBASE_PRIVATE_KEY=", "" } | ForEach-Object { $_ -replace '^"', '' -replace '"$', '' } | ForEach-Object { $_ -replace '\\n', "`n" }
-$privateKey | vercel env add FIREBASE_PRIVATE_KEY preview
-```
-
-### 問題3: 環境判定が正しく動作していない
+### 問題3: ゲストユーザーが存在しない
 
 **症状:**
 
-- ログに `isProduction: true` と表示される
-- `VERCEL_ENV` が正しく設定されていない
+- エラーメッセージ: "ゲストユーザーが存在しません。Firebase Consoleでユーザーを作成してください。"
+- エラーコード: `auth/user-not-found`
 
-**確認方法:**
-ログの `[handleGuestLogin] Environment check:` を確認：
+**解決方法:**
 
-- `VERCEL_ENV` が `preview` になっているか
-- `NODE_ENV` が `production` でも、`VERCEL_ENV` が `preview` ならゲストログインは有効
+1. Firebase Console > **Authentication** > **Users** タブに移動
+2. メールアドレス `s.t.n.uytrewq+guest@gmail.com` のユーザーが存在するか確認
+3. 存在しない場合は、**ユーザーを追加** で作成
+4. パスワードは環境変数 `NEXT_PUBLIC_GUEST_PASSWORD` と同じ値に設定
+
+### 問題4: メールアドレス認証が無効
+
+**症状:**
+
+- エラーメッセージ: 認証方法が無効である旨のエラー
+
+**解決方法:**
+
+1. Firebase Console > **Authentication** > **Sign-in method** タブ
+2. **メール/パスワード** が有効になっているか確認
+3. 無効の場合は有効化する
+
+### 問題5: ユーザーが無効化されている
+
+**症状:**
+
+- エラーメッセージ: "このアカウントは無効化されています。"
+- エラーコード: `auth/user-disabled`
+
+**解決方法:**
+
+1. Firebase Console > **Authentication** > **Users** タブ
+2. `s.t.n.uytrewq+guest@gmail.com` のユーザーを選択
+3. ユーザーが無効化されていないか確認
+4. Firestoreの `users` コレクションで `isActive` が `true` になっているか確認
 
 ## 4. デバッグ用のログ出力
 
-修正後のコードでは、以下のログが出力されます：
+ブラウザのコンソールで以下のログを確認できます：
 
-1. **環境チェック:**
-
-   ```
-   [handleGuestLogin] Environment check: {
-     NODE_ENV: "production",
-     VERCEL_ENV: "preview",
-     NEXT_PUBLIC_VERCEL_ENV: "preview",
-     vercelEnv: "preview",
-     isProduction: false
-   }
-   ```
-
-2. **Firebase Admin SDK初期化:**
+1. **パスワード未設定エラー:**
 
    ```
-   [handleGuestLogin] Initializing Firebase Admin SDK...
-   [handleGuestLogin] Firebase Admin SDK initialized successfully
+   [handleGuestSignIn] Error message: ゲストログインのパスワードが設定されていません
    ```
 
-3. **エラー発生時:**
+2. **認証エラー:**
    ```
-   [handleGuestLogin] Error handling guest login: [エラー詳細]
-   [handleGuestLogin] Error message: [エラーメッセージ]
-   [handleGuestLogin] Environment variables: {
-     FIREBASE_PROJECT_ID: "✓ Set" or "✗ Missing",
-     FIREBASE_CLIENT_EMAIL: "✓ Set" or "✗ Missing",
-     FIREBASE_PRIVATE_KEY: "✓ Set" or "✗ Missing"
-   }
+   [handleGuestSignIn] Error code: auth/wrong-password
+   [handleGuestSignIn] Error message: [エラーメッセージ]
    ```
 
 ## 5. 再デプロイ後の確認
@@ -138,9 +152,35 @@ $privateKey | vercel env add FIREBASE_PRIVATE_KEY preview
 
 ## 6. 確認チェックリスト
 
-- [ ] Preview環境に `FIREBASE_PROJECT_ID` が設定されている
-- [ ] Preview環境に `FIREBASE_CLIENT_EMAIL` が設定されている
-- [ ] Preview環境に `FIREBASE_PRIVATE_KEY` が設定されている（改行文字含む）
+- [ ] Firebase Consoleでメールアドレス認証が有効になっている
+- [ ] Firebase Consoleで `s.t.n.uytrewq+guest@gmail.com` のユーザーが存在する
+- [ ] 環境変数 `NEXT_PUBLIC_GUEST_PASSWORD` が設定されている（Preview環境）
+- [ ] 環境変数のパスワードがFirebase Consoleのパスワードと同じ
 - [ ] 環境変数設定後に再デプロイを実行した
-- [ ] Vercelログで `[handleGuestLogin]` のログを確認した
-- [ ] エラーメッセージの内容を確認した
+- [ ] ブラウザのコンソールでエラーログを確認した
+
+## 7. よくあるエラーパターンと対処法
+
+### `auth/wrong-password`
+
+**意味:** パスワードが間違っている
+
+**対処法:** Firebase Consoleのパスワードと環境変数 `NEXT_PUBLIC_GUEST_PASSWORD` が一致しているか確認してください。
+
+### `auth/user-not-found`
+
+**意味:** ゲストユーザーが存在しない
+
+**対処法:** Firebase Consoleで `s.t.n.uytrewq+guest@gmail.com` のユーザーを作成してください。
+
+### `auth/invalid-email`
+
+**意味:** メールアドレスの形式が正しくない
+
+**対処法:** コード内で使用しているメールアドレス（`s.t.n.uytrewq+guest@gmail.com`）が正しいか確認してください。
+
+### `auth/user-disabled`
+
+**意味:** ユーザーアカウントが無効化されている
+
+**対処法:** Firebase Consoleでユーザーが有効になっているか、Firestoreの `users` コレクションで `isActive` が `true` になっているか確認してください。
